--- a/resources/InfoPlist.strings
+++ b/resources/InfoPlist.strings
@@ -3,13 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>GyaimInput</string>
+	<string>Gyaim</string>
 	<key>CFBundleGetInfoString</key>
 	<string>Gyaim version 1.0, Copyright 2015, Pitecan Systems.</string>
 	<key>CFBundleName</key>
 	<string>Gyaim</string>
 	<key>CFBundleShortVersionString</key>
-	<string>GyaimInput version 1.0</string>
+	<string>Gyaim version 1.0</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>© Pitecan Systems, 2015</string>
 	<key>com.apple.inputmethod.Japanese</key>
